[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/PlayerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://SFX/Hurt2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.1378, 124.062 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 24 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
limit_left = 0
smoothing_enabled = true
[connection signal="animation" from="." to="AnimatedSprite" method="_on_Player_animation"]
